# flashvid-platform-gin/api/user/v1/info.go
@@ -1,0 +1,20 @@
+package v1
+
+// 用户信息响应
+type UserInfoResp struct {
+	UserId 	 int64  `json:"userId"`       // 用户ID
+	Username string `json:"username"`     // 用户名
+	Nickname string `json:"nickname"`     // 昵称
+	Avatar   string `json:"avatar"`       // 头像
+	Bio     string `json:"bio"`          // 个人简介
+	City     string `json:"city"`         // 城市
+	FollowersConut int    `json:"followersCount"`    // 粉丝数
+	FollowingConut int    `json:"followingCount"`    // 关注数
+	VideosCount    int    `json:"videosCount"`       // 发布视频数
+	LikesCount     int    `json:"likesCount"`        // 喜欢数
+	Phone    string `json:"phone"`        // 手机号
+	Gender   string `json:"gender"`       // 性别
+	Birthday string `json:"birthday"`     // 生日
+	Email    string `json:"email"`        // 邮箱
+	CreatedAt string `json:"createdAt"`    // 创建时间
+}
