# flashvid-platform-gin/internal/server/route.go
@@ -2,6 +2,7 @@ package server
 
 import (
 	"flashvid-platform-gin/internal/handler/auth"
+	"flashvid-platform-gin/internal/handler/user"
 	"flashvid-platform-gin/internal/middleware"
 	"flashvid-platform-gin/pkg/logging"
 	"net/http"
@@ -22,12 +23,19 @@ func SetupRoutes(cfg *viper.Viper) *gin.Engine {
 	{
 		authUser := apiV1.Group("/auth")
 		{	
-			authUser.POST("/register", auth.RegisterHandler)
-			authUser.POST("/login", auth.LoginHandler)
-			authUser.POST("/refresh", auth.RefreshHandler)
+			authUser.POST("/register", auth.RegisterHandler) // 注册
+			authUser.POST("/login", auth.LoginHandler) // 登录
+			authUser.POST("/refresh", auth.RefreshHandler) // 刷新Token
 		}
 		authUser.Use(middleware.Auth()) // 需要登录 用Token验证身份
-		
+		userR := apiV1.Group("/user")
+		{
+			userR.GET("/:id", user.GetUserInfoHandler) // 获取用户信息
+			userR.PUT("/:id", user.UpdateUserInfoHandler) // 更新用户信息
+			userR.GET("/:id}/videos", user.GetUserVideosHandler) // 获取用户发布的视频
+			userR.GET("/:id}/likes", user.GetUserLikesHandler) // 获取用户点赞的视频
+			userR.GET("/:id}/favorites", user.GetUserFavoritesHandler) // 获取用户收藏的视频
+		}
 	}
 
 	r.NoRoute(func(c *gin.Context) {
